tests/paczka1/fuzzy1/36791509.err
Error in line 2: okdhIQ A889 29,1
Error in line 8: L1XRsD9Nf S71 97,1
Error in line 13: XWEQ6tzucl A725 65,0
Error in line 22: XFjruokEv A889 93,1
Error in line 26: ev8 A889 49,7
Error in line 34: L1XRsD9Nf S71 38,0
